tests/ui/derive/fail_duplicate_columns.stderr
error: duplicate column name `email`
  --> tests/ui/derive/fail_duplicate_columns.rs:11:5
   |
11 |     email: String,
   |     ^^^^^
